cmake_minimum_required(VERSION 3.22)
project(LeetCodeProject)

set(CMAKE_CXX_STANDARD 20)

add_executable(LeetCodeProject Offer29.cpp Offer54.cpp Offer56.cpp 5.cpp 13.cpp 15.cpp 54.cpp 101.cpp 142.cpp 169.cpp 213.cpp 227.cpp 232.cpp 337.cpp 341.cpp 386.cpp 396.cpp 398.cpp 405.cpp 417.cpp 433.cpp 442.cpp 449.cpp 483.cpp 509.cpp 516.cpp 520.cpp 525.cpp 564.cpp 587.cpp 679.cpp 693.cpp 719.cpp 740.cpp 746.cpp 821.cpp 824.cpp 868.cpp 883.cpp 884.cpp 905.cpp 942.cpp 965.cpp 997.cpp 1001.cpp 1089.cpp 1108.cpp 1137.cpp 1189.cpp 1207.cpp 1305.cpp 1345.cpp 1371.cpp 1414.cpp 1530.cpp 1672.cpp 1725.cpp 1816.cpp 1920.cpp 1984.cpp 2000.cpp 2013.cpp 2045.cpp LCP06.cpp 508.cpp 715.cpp 94.cpp 98.cpp 99.cpp 100.cpp 104.cpp 110.cpp 515.cpp 102.cpp 103.cpp 107.cpp Offer91.cpp 278.cpp 111.cpp 112.cpp 116.cpp 117.cpp 120.cpp 113.cpp 710.cpp 522.cpp 13.cpp 871.cpp 1217.cpp 565.cpp 300.cpp test.cpp 1475.cpp 811.cpp 870.cpp 856.cpp 801.cpp 79.cpp 0804.cpp 817.cpp 135.cpp 769.cpp)
